--- a/playbooks/roles/solana_validator_bootstrap/templates/solana-validator.service.j2
+++ b/playbooks/roles/solana_validator_bootstrap/templates/solana-validator.service.j2
@@ -16,10 +16,9 @@ Environment="BLOCK_ENGINE_URL={{ jito_block_engine_url }}"
 Environment="RELAYER_URL={{ jito_relayer_url }}"
 Environment="SHRED_RECEIVER_ADDR={{ jito_receiver_addr }}"
 {% endif %}
-ExecStart={{ env_path }}/solana-validator \
+ExecStart={{ env_path }}/agave-validator \
 --identity {{ secrets_path }}/validator-keypair.json \
---vote-account {{ secrets_path }}/vote-account-keypair.json \
---authorized-voter /home/solana/.secrets/funded-validator-keypair.json \
+--vote-account {{ vote_account_pubkey }} \
 --rpc-port {{ solana_rpc_port }} \
 --only-known-rpc \
 --private-rpc \
