--- a/playbooks/roles/solana_validator_bootstrap/templates/node-transition.sh.j2
+++ b/playbooks/roles/solana_validator_bootstrap/templates/node-transition.sh.j2
@@ -50,6 +50,8 @@ agave-validator -l {{ ledger_path }} wait-for-restart-window --min-idle-time 2 -
 agave-validator -l {{ ledger_path }} set-identity {{ secrets_path }}/unfunded-validator-keypair.json
 sleep 1s
 
+agave-validator -l {{ ledger_path }} authorized-voter remove-all
+
 # Move symlink to unfunded validator keypair to prevent this node to vote concurrently in case of service restart
 ln -sf {{ secrets_path }}/unfunded-validator-keypair.json {{ secrets_path }}/validator-keypair.json
 
