--- a/playbooks/roles/solana_validator_bootstrap/templates/node-transition.sh.j2
+++ b/playbooks/roles/solana_validator_bootstrap/templates/node-transition.sh.j2
@@ -44,7 +44,7 @@ TRANSITIONAL_NODE_FUNDED_VALIDATOR_KEYPAIR_FILE_SHA1SUM=$(ssh $TRANSITIONAL_NODE
 [ "$TRANSITIONAL_NODE_FUNDED_VALIDATOR_KEYPAIR_FILE_SHA1SUM" != "$(cat {{ secrets_path }}/funded-validator-keypair.json | sha1sum)"  ] && { echo "Funded validator keypair must be the same on each nodes"; exit 1; }
 
 # Wait for a restart window
-agave-validator -l {{ ledger_path }} wait-for-restart-window --min-idle-time 2 --skip-new-snapshot-check
+agave-validator -l {{ ledger_path }} wait-for-restart-window --min-idle-time 2 --skip-new-snapshot-check --skip-health-check
 
 # Stop voting operation on the currently voting node
 agave-validator -l {{ ledger_path }} set-identity {{ secrets_path }}/unfunded-validator-keypair.json
