playbooks/roles/solana_validator_bootstrap/templates/solana-validator.service.j2: LimitMEMLOCK=2000000000 # required for agave 3.0

--- a/playbooks/roles/solana_validator_bootstrap/templates/solana-validator.service.j2
+++ b/playbooks/roles/solana_validator_bootstrap/templates/solana-validator.service.j2
@@ -9,6 +9,7 @@ Restart=always
 RestartSec=1
 User={{ solana_user }}
 LimitNOFILE=1024000
+LimitMEMLOCK=2000000000
 Environment="PATH=/bin:/usr/bin:{{ env_path }}"
 #Environment="SOLANA_METRICS_CONFIG=host={{ solana_metrics_url }}"
 {% if jito_enable %}
