playbooks/roles/solana_validator_bootstrap/templates/solana-validator.service.j2: Environment="RUST_LOG=info,solana_metrics=warn"

--- a/playbooks/roles/solana_validator_bootstrap/templates/solana-validator.service.j2
+++ b/playbooks/roles/solana_validator_bootstrap/templates/solana-validator.service.j2
@@ -14,6 +14,7 @@ AmbientCapabilities=CAP_NET_RAW CAP_BPF CAP_NET_ADMIN CAP_PERFMON
 CapabilityBoundingSet=CAP_NET_RAW CAP_BPF CAP_NET_ADMIN CAP_PERFMON
 NoNewPrivileges=no
 Environment="PATH=/bin:/usr/bin:{{ env_path }}"
+Environment="RUST_LOG=info,solana_metrics=warn"
 #Environment="SOLANA_METRICS_CONFIG=host={{ solana_metrics_url }}"
 {% if jito_enable %}
 Environment="BLOCK_ENGINE_URL={{ jito_block_engine_url }}"
